--- a/public/aseete/css/style1.css
+++ b/public/aseete/css/style1.css
@@ -90,9 +90,9 @@ h3 {
     padding-top: 1.3rem;
 }
 
-.container {
-    /* height: 100vh; */
-}
+/* .container {
+    height: 100vh;
+} */
 
 .img {
     width: 100%;
@@ -103,7 +103,7 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 9;
+    z-index: 9999;
 }
 
 header .container {
